versioned_docs/version-2.16/reference/subsystems/twine.mdx
---
title: twine
description: |
  The utility for publishing Python distributions to PyPI and other Python repositories.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The utility for publishing Python distributions to PyPI and other Python repositories.

Backend: <span className="color--primary">`pants.backend.experimental.python`</span>

Config section: <span className="color--primary">`[twine]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]twine-skip`}
  env_repr='PANTS_TWINE_SKIP'
  toml_repr={`[twine]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Twine when running `pants publish`.

</Option>

### `args`

<Option
  cli_repr={`--twine-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_TWINE_ARGS'
  toml_repr={`[twine]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Twine, e.g. `--twine-args='--skip-existing'`.

</Option>

## Advanced options

### `install_from_resolve`

<Option
  cli_repr={`--twine-install-from-resolve=<str>`}
  env_repr='PANTS_TWINE_INSTALL_FROM_RESOLVE'
  toml_repr={`[twine]
install_from_resolve = <str>`}
  default_repr={`None`}
>

If specified, install the tool using the lockfile for this named resolve.

This resolve must be defined in [python].resolves, as described in https://www.pantsbuild.org/v2.16/docs/python-third-party-dependencies#user-lockfiles.

The resolve&#x27;s entire lockfile will be installed, unless specific requirements are listed via the `requirements` option, in which case only those requirements will be installed. This is useful if you don&#x27;t want to invalidate the tool&#x27;s outputs when the resolve incurs changes to unrelated requirements.

If unspecified, and the `lockfile` option is unset, the tool will be installed using the default lockfile shipped with Pants.

If unspecified, and the `lockfile` option is set, the tool will use the custom `twine` &#x22;tool lockfile&#x22; generated from the `version` and `extra_requirements` options. But note that this mechanism is deprecated.

</Option>

### `requirements`

<Option
  cli_repr={`--twine-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_TWINE_REQUIREMENTS'
  toml_repr={`[twine]
requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

If install_from_resolve is specified, install these requirements, at the versions provided by the specified resolve&#x27;s lockfile.

Values can be pip-style requirements (e.g., `tool` or `tool==1.2.3` or `tool>=1.2.3`), or addresses of python_requirement targets (or targets that generate or depend on python_requirement targets).

The lockfile will be validated against the requirements - if a lockfile doesn&#x27;t provide the requirement (at a suitable version, if the requirement specifies version constraints) Pants will error.

If unspecified, install the entire lockfile.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--twine-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_TWINE_INTERPRETER_CONSTRAINTS'
  toml_repr={`[twine]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `console_script`

<Option
  cli_repr={`--twine-console-script=<str>`}
  env_repr='PANTS_TWINE_CONSOLE_SCRIPT'
  toml_repr={`[twine]
console_script = <str>`}
  default_repr={`twine`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--twine-entry-point=<str>`}
  env_repr='PANTS_TWINE_ENTRY_POINT'
  toml_repr={`[twine]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `config`

<Option
  cli_repr={`--twine-config=<file_option>`}
  env_repr='PANTS_TWINE_CONFIG'
  toml_repr={`[twine]
config = <file_option>`}
  default_repr={`None`}
>

Path to a .pypirc config file to use. (https://packaging.python.org/specifications/pypirc/)

Setting this option will disable `[twine].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]twine-config-discovery`}
  env_repr='PANTS_TWINE_CONFIG_DISCOVERY'
  toml_repr={`[twine]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include all relevant config files during runs (`.pypirc`).

Use `[twine].config` instead if your config is in a non-standard location.

</Option>

### `ca_certs_path`

<Option
  cli_repr={`--twine-ca-certs-path=<str>`}
  env_repr='PANTS_TWINE_CA_CERTS_PATH'
  toml_repr={`[twine]
ca_certs_path = <str>`}
  default_repr={`<inherit>`}
>

Path to a file containing PEM-format CA certificates used for verifying secure connections when publishing python distributions.

Uses the value from `[GLOBAL].ca_certs_path` by default. Set to `"<none>"` to not use any certificates.

Even when using the `docker_environment` and `remote_environment` targets, this path will be read from the local host, and those certs will be used in the environment.

This option cannot be overridden via environment targets, so if you need a different value than what the rest of your organization is using, override the value via an environment variable, CLI argument, or `.pants.rc` file. See https://www.pantsbuild.org/v2.16/docs/options.

</Option>

## Deprecated options

### `version`

<Option
  cli_repr={`--twine-version=<str>`}
  env_repr='PANTS_TWINE_VERSION'
  toml_repr={`[twine]
version = <str>`}
  default_repr={`twine>=4,<5`}
  removal_version='2.18.0.dev1'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.'}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--twine-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_TWINE_EXTRA_REQUIREMENTS'
  toml_repr={`[twine]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "colorama>=0.4.3"\n]`}
  removal_version='2.18.0.dev1'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.'}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `lockfile`

<Option
  cli_repr={`--twine-lockfile=<str>`}
  env_repr='PANTS_TWINE_LOCKFILE'
  toml_repr={`[twine]
lockfile = <str>`}
  default_repr={`<default>`}
  removal_version='2.18.0.dev0'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.<br /><br />1. If you have an existing resolve that includes the requirements for this tool,<br />    you can set `[twine].install_from_resolve = "<resolve name>".<br />    This may be the case if the tool also provides a runtime library, and you want<br />    to specify the version in just one place.<br />2. If not, you can set up a new resolve as described at the link above.<br /><br />Either way, the resolve you choose should provide the requirements currently set by the `version` and `extra-requirements` options for this tool, which you can see by running `pants help-advanced twine`.'}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.16.1rc4/src/python/pants/backend/python/subsystems/twine.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `pants generate-lockfiles --resolve=twine`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

## Related subsystems

None

</span>
